app/styles/_frame.scss
@import "vars";

html {
  overflow-y: -moz-scrollbars-vertical;
  overflow-y: scroll;
}

body {
  background:url(/images/bg.png) repeat;
  font-family: 'Roboto', sans-serif;
  text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
}

#topbar {
  background:$main_color;
  height:50px;
  width:100%;
  line-height:50px;
  padding:0px 20px;

  &:before, &:after {
    clear:both;
    display:block;
    content:"";
  }

  #usericon {
    float:right;
    margin-top:18px;
    cursor:pointer;
    color:#828a89;
    line-height:1;
    transition:color 0.4s;

    &:hover {
      color:$third_color;
    }
  }

  h1 a {
    color:white;
    text-decoration:none;
    font-size:20px;
    float:left;
  }
}

#subbar {
  background:$fourth_color;
  height:50px;
  width:100%;
  line-height:50px;
  padding:0px 20px;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.02);
  position:relative;

  h2 {
    float:left;

    a {
      color:$second_color;
      text-decoration:none;
      font-size:20px;
    }
  }

  #builderSettings {
    position:absolute;
    top:1px;
    right:20px;
    color:#828a89;
    cursor:pointer;

    &:hover {
      color:$third_color;
    }
  }

  #new_btn {
    border-radius:20px;
    background:$third_color;
    float:right;
    cursor:pointer;
    color:white;
    text-decoration:none;
    padding:10px 35px;
    line-height:1;
    margin-top:7px;
    transition:box-shadow 0.4s;

    &:hover {
      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    }
  }

  #appTitle {
    width:200px;
    float:left;
    height:100%;
    background:$second_color;
    margin-left:-20px;
    padding:0 20px;
    color:white;
    font-size:18px;

    @extend .truncate;
  }

  #appTabs {
    list-style-type:none;
    float:left;
    padding-left:20px;
    width:calc(100% - 200px);
    overflow:hidden;
    height:50px;

    li {
      display:inline-block;
      margin-right:25px;
      a {
        height:50px;
        color:$builder-nav-color;
        text-decoration:none;
        display:block;
        transition:color 0.2s;

        &:hover {
          color:$second_color;
        }

        &.active {
          color:$second_color;
          border-bottom:3px solid $second_color;
        }
      }
    }
  }
}

#appArea {
  width:100%;
  max-width:1020px;
  margin:auto;
  padding:40px;

  .appWrapper {
    width:100%;
    height:180px;
    background:$main_color;
    border-radius:4px;
    margin-bottom:20px;
    padding:20px;
    position:relative;
    transition:box-shadow 0.4s;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    overflow:hidden;

    &:before, &:after {
      clear:both;
      content:"";
      display:block;
    }

    &:hover {
      box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
    }

    .appLink {
      width:100%;
      height:100%;
      position:absolute;
      top:0;
      left:0;
      right:0;
      bottom:0;
    }

    .imgArea {
      width:75px;
      float:left;

      img {
        border-radius:4px;
      }
    }

    .descArea {
      width:calc(100% - 95px);
      float:left;
      padding:0px 20px;
      color:white;

      h3 {
        font-size:20px;
        line-height:1.5;
      }

      p {
        font-size:14px;
        line-height:1.5;
        margin-bottom:10px;
      }
    }

    .iconArea {
      padding:4px;
      background:$success_color;
      border-radius:50%;
      position:absolute;
      right:20px;
      top:20px;
      font-size:12px;
      color:$main_color;
    }
  }
}

#builderNav {
  width:200px;
  height:calc(100vh - 100px);
  background:$main_color;
  padding-top:10px;
  float:left;

  #search {
    width:180px;
    height:30px;
    background:$search_bg;
    margin:auto;
    margin-bottom:10px;
    border-radius:20px;
    color:#b6bec1;
    line-height:30px;
    padding:0px 10px;
    font-size:14px;

    input {
      width:135px;
      background:transparent;
      border:none;
      outline:none;
      margin-left:10px;
      color:#b6bec1;
      padding-top:2px;
    }
  }

  aside {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    &.open {
      .fa-sort-desc {
        transform: translate(0, -6px) rotate(0deg);
        margin-right:10px;
      }

      .table-list {
        display:block;
      }
    }

    &.active {
      h3 {
        color:white;
        background:$third_color;
      }

      .table-list {
        border-left:4px solid $third_color;
        background:#3b4746;
      }
    }

    h3 {
      text-transform:uppercase;
      color:#7b8483;
      padding:10px 20px;
      cursor:pointer;

      .fa-sort-desc {
        transform: translate(0, 0px) rotate(-90deg);
        margin-right:10px;
      }

      .entity-name {
        @extend .truncate;
      }

      .new-field {
        color: white;
        float: right;
      }
    }

    .table-list {
      background:transparent;
      color:white;
      border-left:4px solid transparent;
      display:none;

      li {
        padding:8px 0px 8px 30px;
        font-size:15px;
        line-height:1.3;
        cursor:default;

        &:hover {
          cursor: pointer;
        }

        i {
          margin-right:10px;

          &.fa-info {
            float:right;
            color:white;
            font-weight:300;
            font-size: 12px;
            line-height: 21px;
            display:none;
            cursor:pointer;
          }
        }

        &:hover, &.active {
          background: $third_color;

          i.fa-info {
            display:inline-block;
          }
        }
      }
    }
  }

  .newtable {
    color:rgba(255,255,255,0.2);
    text-decoration:none;
    text-transform:uppercase;
    margin-top:20px;
    display:block;
    padding-left:20px;

    &:hover {
      color:white;
    }
  }
}

#contentHolder {
  width:calc(100% - 200px);
  max-height:calc(100vh - 100px);
  height:calc(100vh - 100px);
  float:left;
  display:table;
  text-align:center;

  .row {
    width:100%;
    display:table-cell;
    vertical-align:middle;

    .tableWrapper {
      width:680px;
      margin:auto;
      text-align:left;
    }

    .table {
      width:160px;
      height:180px;
      padding:20px;
      margin:30px;
      background:$main_color;
      border-radius:4px;
      display:inline-block;
      text-align:left;
      vertical-align:top;

      h2 {
        color:white;
        font-size:20px;
        margin-bottom:10px;
      }

      ul {
        color:rgba(255,255,255,0.7);
        font-size:10px;

        li {
          margin-bottom:10px;
          cursor:pointer;

          &.field-label:nth-child(n+6) {
            display: none;
          }

          &:hover {
            color:white;
          }

          i {
            margin-right:5px;
          }

          &.more {
            span {
              margin-left:17px;
              &:hover {
                text-decoration:underline;
                cursor:pointer;
              }
            }
          }
        }
      }

      &:hover {
        background:$third_color;
      }
    }
  }
}

